# TU_C_exercises

./: README.md
src/: CMakeLists.txt  README.md  a.out  baum.dot  buecherliste_test.txt  ckurs_blatt01_aufgabe02.c  ckurs_blatt01_hallo_osiris.txt  ckurs_blatt02_aufgabe01.c  ckurs_blatt03_aufgabe01.c  ckurs_blatt04_aufgabe01.c  ckurs_blatt05_aufgabe01.c  ckurs_blatt06_aufgabe01.c  ckurs_blatt07_aufgabe02.c  input.c  introprog_avl.c  introprog_buecherliste.c  introprog_complexity_steps_intro.c  introprog_complexity_steps_sorting  introprog_complexity_steps_sorting.c  introprog_countsort.c  introprog_insertionsort.c  introprog_maxheap.c  introprog_merge_sort_iterativ.c  introprog_merge_sort_rekursiv.c  introprog_quicksort.c  introprog_sortierte_buecherliste  introprog_sortierte_buecherliste.c  introprog_stacks-rpn.c  introprog_telefonbuch.c  stacks_tmp  tele  telefonbuch_fehlerhaft1.txt  telefonbuch_fehlerhaft2.txt  telefonbuch_fehlerhaft3.txt  telefonbuch_sehrgross.txt  test.c  zahlen_fast_sortiert.txt
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/introprog_complexity_steps_sorting.dSYM/Contents/: Info.plist
src/introprog_complexity_steps_sorting.dSYM/Contents/Resources/DWARF/: introprog_complexity_steps_sorting
src/tst.txt.dSYM/Contents/: Info.plist
src/tst.txt.dSYM/Contents/Resources/DWARF/: tst.txt
