cmake_minimum_required(VERSION 3.23)
project(introprog_ws22 C)

set(CMAKE_C_STANDARD 11)

add_executable(test test.c)
add_executable(ckurs_blatt01_aufgabe02 ckurs_blatt01_aufgabe02.c)
add_executable(ckurs_blatt02_aufgabe01 ckurs_blatt02_aufgabe01.c)
add_executable(ckurs_blatt03_aufgabe01 ckurs_blatt03_aufgabe01.c)
add_executable(ckurs_blatt04_aufgabe01 ckurs_blatt04_aufgabe01.c input.c)
add_executable(ckurs_blatt05_aufgabe01 ckurs_blatt05_aufgabe01.c)
add_executable(ckurs_blatt06_aufgabe01 ckurs_blatt06_aufgabe01.c input2.c)
#add_executable(ckurs_blatt07_aufgabe01 ckurs_blatt07_aufgabe01.c)
add_executable(introprog_insertionsort introprog_insertionsort.c arrayio.c arrayio.h zahlen_insertionsort.txt)
add_executable(introprog_countsort introprog_countsort.c arrayio.c arrayio.h zahlen_countsort.txt)
add_executable(introprog_complexity_steps_intro introprog_complexity_steps_intro.c introprog_complexity_steps_input.c introprog_complexity_steps_input.c)
add_executable(introprog_complexity_steps_sorting introprog_complexity_steps_sorting.c introprog_complexity_steps_input.c introprog_complexity_steps_input.c)
add_executable(introprog_buecherliste introprog_buecherliste.c introprog_structs_lists_input.c)
add_executable(introprog_sortierte_buecherliste introprog_sortierte_buecherliste.c introprog_structs_lists_input.c)
add_executable(introprog_stacks-rpn introprog_stacks-rpn.c introprog_input_stacks-rpn.c)
add_executable(introprog_telefonbuch introprog_main_telefonbuch.c introprog_telefonbuch.c introprog_input_telefonbuch.c)
add_executable(introprog_merge_sort_rekursiv introprog_merge_sort_rekursiv.c introprog_input_merge_sort.c)
add_executable(introprog_merge_sort_iterativ introprog_merge_sort_iterativ.c introprog_input_merge_sort.c)
add_executable(introprog_maxheap introprog_main_maxheap.c introprog_maxheap.c)
add_executable(introprog_quicksort main_quicksort.c introprog_quicksort.c)
add_executable(introprog_avl main_avl.c introprog_avl.c avl.c)